@@ -4,9 +4,11 @@ Easy:
  * Better documentation.
  * Support scripts, documentation and Makefiles for various systems.
  * Better logging options.
- * ICMP support.
  * Better Makefiles.
- * Option to
+ * Option to do all name lookups (hosts, services, ICMP)
+ * Option to output a skeleton around the filter (set policies, drop
+   invalid packets, etc)
+ * Translate icmp names (at least for ipfilter and cisco)
 
 Harder:
  * Testing and auditing of generated rulesets.
@@ -37,4 +39,4 @@ Hard:
    This is possible, but tiresome, and will require an optimiser
    if the generated rulesets are not to Suck.
 
-$Id: TODO,v 1.5 2001/10/06 19:07:17 matthew Exp $
+$Id: TODO,v 1.6 2001/10/06 20:24:34 matthew Exp $
