@@ -1,8 +1,9 @@
 0.4: testing begins
 	add transproxy and masquerading support
-	fix syntax problems with iptables output
+	fix syntax problems with iptables and ipchains output
 	simple logging support (logs only initiating packets)
 	rule checking -- ports only allowed with tcp or udp
+	initial icmp support
 
 0.3:
 	add ipfilter backend
@@ -21,4 +22,4 @@
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.8 2001/10/06 19:07:17 matthew Exp $
+$Id: HISTORY,v 1.9 2001/10/06 20:24:34 matthew Exp $
